Bug 404798, assertions when root element is removed from xul document during inline script, r+sr=smaug